--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">环信DEMO</string>
+    <string name="app_name">超级微信</string>
     <string name="text_ack_msg">已读</string>
     <string name="text_delivered_msg">送达</string>
     <string name="back">返回</string>
@@ -305,4 +305,44 @@
     <string name="toast_updatenick_fail">更新昵称失败!</string>
     <string name="toast_updatephoto_success">更新头像成功!</string>
     <string name="toast_updatephoto_fail">更新头像失败!</string>
+    <string name="msg_900">连接服务器成功</string>;
+    <string name="msg_901">连接服务器失败</string>;
+    <string name="msg_902">上传头像成功</string>;
+    <string name="msg_903">上传头像失败</string>;
+    <string name="msg_101">注册成功</string>;
+    <string name="msg_102">账号已经存在</string>;
+    <string name="msg_103">上传头像失败</string>;
+    <string name="msg_104">上传头像成功</string>;
+    <string name="msg_105">注册失败</string>;
+    <string name="msg_106">注册成功</string>;
+    <string name="msg_107">注册失败</string>;
+    <string name="msg_201">已经是好友关系</string>;
+    <string name="msg_202">好友关系</string>;
+    <string name="msg_301">创建群组成功</string>;
+    <string name="msg_302">群组环信ID已经存在</string>;
+    <string name="msg_303">创建群组成功</string>;
+    <string name="msg_304">添加群组成员失败</string>;
+    <string name="msg_305">添加群组成员成功</string>;
+    <string name="msg_306">群组不存在</string>;
+    <string name="msg_307">群组名称未修改</string>;
+    <string name="msg_308">群组名称修改成功</string>;
+    <string name="msg_309">群组名称修改失败</string>;
+    <string name="msg_310">删除群组成员成功</string>;
+    <string name="msg_311">删除群组成员失败</string>;
+    <string name="msg_312">删除群组成功</string>;
+    <string name="msg_313">删除群组失败</string>;
+    <string name="msg_401">账户不存在</string>;
+    <string name="msg_402">账户密码错误</string>;
+    <string name="msg_403">登陆成功</string>;
+    <string name="msg_404">昵称未修改</string>;
+    <string name="msg_405">昵称修改成功</string>;
+    <string name="msg_406">昵称修改失败</string>;
+    <string name="msg_407">昵称未修改</string>;
+    <string name="msg_408">昵称修改成功</string>;
+    <string name="msg_409">昵称修改失败</string>;
+    <string name="msg_501">用户上传地理位置成功</string>;
+    <string name="msg_502">用户上传地理位置失败</string>;
+    <string name="msg_503">用户更新地理位置成功</string>;
+    <string name="msg_504">用户更新地理位置失败</string>;
+    <string name="msg_999">未知错误</string>;
 </resources>
