--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -101,11 +101,13 @@
     <string name="Group_of_Lord">The group owner</string>
     <string name="Introduction">Brief</string>
     <string name="To_join_the_chat">Join the group</string>
-    <string name="login">Login</string>
-    <string name="user_name">User name</string>
-    <string name="password">Password</string>
-    <string name="register">Register</string>
-    <string name="confirmpassword">Confirm password</string>
+<string name="login">login</string>
+<string name="user_name">username</string>
+<string name="nike">nike</string>
+<string name="password">password</string>
+<string name="register">register</string>
+
+    <string name="confirmpassword">confirmpassword</string>
     <string name="downwaiting">Downloading the file, please try again later</string>
     <string name="mute">Mute</string>
     <string name="Hands_free">Hands free</string>
