--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -8,7 +8,6 @@
     <string name="save">保存</string>
     <string name="button_pushtotalk">按住说话</string>
     <string name="button_send">发送</string>
-    <string name="avatar">头像</string>
     <string name="attach_smile">表情</string>
     <string name="attach_picture">图片</string>
     <string name="attach_take_pic">拍照</string>
@@ -107,6 +106,7 @@
     <string name="Group_of_Lord">群主</string>
     <string name="Introduction">简介</string>
     <string name="To_join_the_chat">加入群聊</string>
+    <string name="send_message">发送消息</string>
     <string name="login">登录</string>
     <string name="user_name">用户名</string>
     <string name="password">密码</string>
@@ -163,6 +163,7 @@
     <string name="Cant_chat_with_yourself">不能和自己聊天</string>
     <string name="deleting">正在删除...</string>
     <string name="Delete_failed">删除失败:</string>
+    <string name="Delete_successfully">删除成功</string>
     <string name="Is_moved_into_blacklist">正在移入黑名单...</string>
     <string name="Log_uploaded_successfully">日志上传成功</string>
     <string name="Log_Upload_failed">log上传失败</string>
@@ -199,6 +200,7 @@
     <string name="temporary_does_not">暂不支持大于10M的视频！</string>
     <string name="Video_footage">拍摄录像</string>
     <string name="User_name_cannot_be_empty">用户名不能为空！</string>
+    <string name="User_name_cannot_be_wd">用户名只能为数字字母下划线！</string>
     <string name="Password_cannot_be_empty">密码不能为空！</string>
     <string name="please_set_the_current">设置当前用户的昵称\n用于ios离线推送时显示用户昵称</string>
     <string name="Is_landing">正在登录...</string>
@@ -221,12 +223,14 @@
     <string name="Open_the_equipment_failure">打开设备失败!</string>
     <string name="Confirm_password_cannot_be_empty">确认密码不能为空!</string>
     <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
+    <string name="upload_avatar_failed">上传头像失败!</string>
     <string name="Is_the_registered">正在注册...</string>
     <string name="Registered_successfully">注册成功</string>
     <string name="network_anomalies">网络异常，请检查网络！</string>
     <string name="User_already_exists">用户已存在！</string>
     <string name="registration_failed_without_permission">注册失败，无权限！</string>
     <string name="Registration_failed">注册失败:</string>
+    <string name="cancel_register_failed">取消注册失败</string>
     <string name="Are_logged_out">正在退出登录..</string>
     <string name="Download_the_pictures">下载图片: 0%</string>
     <string name="Download_the_pictures_new">下载图片:</string>
@@ -306,45 +310,54 @@
     <string name="toast_updatenick_fail">更新昵称失败!</string>
     <string name="toast_updatephoto_success">更新头像成功!</string>
     <string name="toast_updatephoto_fail">更新头像失败!</string>
-    <string name="setServerIp">设置服务器的IP地址</string>
-    <string name="msg_900">连接服务器成功</string>;
-    <string name="msg_901">连接服务器失败</string>;
-    <string name="msg_902">上传头像成功</string>;
-    <string name="msg_903">上传头像失败</string>;
-    <string name="msg_101">注册成功</string>;
-    <string name="msg_102">账号已经存在</string>;
-    <string name="msg_103">上传头像失败</string>;
-    <string name="msg_104">上传头像成功</string>;
-    <string name="msg_105">注册失败</string>;
-    <string name="msg_106">注册成功</string>;
-    <string name="msg_107">注册失败</string>;
-    <string name="msg_201">已经是好友关系</string>;
-    <string name="msg_202">好友关系</string>;
-    <string name="msg_301">创建群组成功</string>;
-    <string name="msg_302">群组环信ID已经存在</string>;
-    <string name="msg_303">创建群组成功</string>;
-    <string name="msg_304">添加群组成员失败</string>;
-    <string name="msg_305">添加群组成员成功</string>;
-    <string name="msg_306">群组不存在</string>;
-    <string name="msg_307">群组名称未修改</string>;
-    <string name="msg_308">群组名称修改成功</string>;
-    <string name="msg_309">群组名称修改失败</string>;
-    <string name="msg_310">删除群组成员成功</string>;
-    <string name="msg_311">删除群组成员失败</string>;
-    <string name="msg_312">删除群组成功</string>;
-    <string name="msg_313">删除群组失败</string>;
-    <string name="msg_401">账户不存在</string>;
-    <string name="msg_402">账户密码错误</string>;
-    <string name="msg_403">登陆成功</string>;
-    <string name="msg_404">昵称未修改</string>;
-    <string name="msg_405">昵称修改成功</string>;
-    <string name="msg_406">昵称修改失败</string>;
-    <string name="msg_407">昵称未修改</string>;
-    <string name="msg_408">昵称修改成功</string>;
-    <string name="msg_409">昵称修改失败</string>;
-    <string name="msg_501">用户上传地理位置成功</string>;
-    <string name="msg_502">用户上传地理位置失败</string>;
-    <string name="msg_503">用户更新地理位置成功</string>;
-    <string name="msg_504">用户更新地理位置失败</string>;
-    <string name="msg_999">未知错误</string>;
+    <string name="Add_buddy_success">添加好友成功</string>
+    <string name="Add_buddy_failed">添加好友失败</string>
+    <string name="Nick_name_cannot_be_empty">昵称不能为空！</string>
+    <string name="Group_name_existed">群组名称已经存在</string>
+    <string name="Create_groups_Success">创建群组成功</string>
+    <string name="Create_groups_Failed">创建群组失败</string>
+    <string name="photo">头像</string>
+    <string name="near_people_hint">
+        查看附近人的功能将获取你的位置信息，你的位置信息会保留一段时间。通过列表右上角清除功能可随时手动清除位置信息。
+    </string>
+    <string name="msg_900">连接服务器成功</string>
+    <string name="msg_901">连接服务器失败</string>
+    <string name="msg_902">上传头像成功</string>
+    <string name="msg_903">上传头像失败</string>
+    <string name="msg_101">注册成功</string>
+    <string name="msg_102">账号已经存在</string>
+    <string name="msg_103">上传头像失败</string>
+    <string name="msg_104">上传头像成功</string>
+    <string name="msg_105">注册失败</string>
+    <string name="msg_106">注册成功</string>
+    <string name="msg_107">注册失败</string>
+    <string name="msg_201">已经是好友关系</string>
+    <string name="msg_202">好友关系</string>
+    <string name="msg_301">创建群组成功</string>
+    <string name="msg_302">群组环信ID已经存在</string>
+    <string name="msg_303">创建群组成功</string>
+    <string name="msg_304">添加群组成员失败</string>
+    <string name="msg_305">添加群组成员成功</string>
+    <string name="msg_306">群组不存在</string>
+    <string name="msg_307">群组名称未修改</string>
+    <string name="msg_308">群组名称修改成功</string>
+    <string name="msg_309">群组名称修改失败</string>
+    <string name="msg_310">删除群组成员成功</string>
+    <string name="msg_311">删除群组成员失败</string>
+    <string name="msg_312">删除群组成功</string>
+    <string name="msg_313">删除群组失败</string>
+    <string name="msg_401">账户不存在</string>
+    <string name="msg_402">账户密码错误</string>
+    <string name="msg_403">登陆成功</string>
+    <string name="msg_404">昵称未修改</string>
+    <string name="msg_405">昵称修改成功</string>
+    <string name="msg_406">昵称修改失败</string>
+    <string name="msg_407">昵称未修改</string>
+    <string name="msg_408">昵称修改成功</string>
+    <string name="msg_409">昵称修改失败</string>
+    <string name="msg_501">用户上传地理位置成功</string>
+    <string name="msg_502">用户上传地理位置失败</string>
+    <string name="msg_503">用户更新地理位置成功</string>
+    <string name="msg_504">用户更新地理位置失败</string>
+    <string name="msg_999">未知错误</string>
 </resources>
