七、Newgoodfragment 1、新建NewGoodFragment文件 2、继承Fragment(V4包中) 3、创建GoodAdapter 4、继承RecyclerView.Adapter并导入方法 5、创建GoodItemViewHolder方法
6、Gooditem和footeritem布局

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -376,4 +376,10 @@
     <string name="title_activity_pay_pal_un_synced_list">PayPalUnSyncedListActivity</string>
     <string name="share">share</string>
     <string name="user_qrcode">user qrcode</string>
+    <string name="load_more">load more</string>
+    <string name="no_more">no more data!</string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
