--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -378,6 +378,7 @@
     <string name="user_qrcode">user qrcode</string>
     <string name="load_more">load more</string>
     <string name="no_more">no more data!</string>
+    <string name="title_good_details">商品详情</string>
 
 
     <!-- TODO: Remove or change this placeholder text -->
